# pilot

./: .env.example  .gitignore  LICENSE  Package.swift  README.md  project.yml
pilotd/: pyproject.toml  requirements-dev.txt  requirements.txt
pilotd/pilot/: __init__.py  __main__.py  embedding.py  memory_vec.py  prompts.py  run_logger.py  scheduler.py  scheduler_runtime.py  service.py  sockserver.py  workflow_compiler.py
pilotd/pilot/core/: __init__.py  _window_helpers.py  config.py  controller.py  paths.py  planner.py  usage.py  window_capture.py
pilotd/pilot/core/element_detector/: __init__.py  cache.py  detector.py  parsing.py  screen_graph.py  som_overlay.py  ui_element.py  vocab.py
pilotd/pilot/core/input_simulator/: __init__.py  _cgevent_typing.py  _coords.py  _focus.py  _keycodes.py  cgevent.py  core.py  unicode_input.py
pilotd/pilot/core/safety/: __init__.py  detectors.py  guard.py  helpers.py  (+4 more)
pilotd/pilot/handlers/: __init__.py  device_handlers.py  health_handlers.py  memory_handlers.py  run_handlers.py  schedule_handlers.py  session_handlers.py  usage_handlers.py  workflow_handlers.py
pilotd/pilot/mcp/: __init__.py  __main__.py  client.py  permissions.py  server.py  tools.py
pilotd/pilot/workflow/: __init__.py  engine.py  engine_steps.py  expr.py  extractor.py  goal_agent.py  replanner.py  schema.py
pilotd/tests/: test_abort_if.py  test_device_handlers.py  test_mcp_permissions.py  test_memory_vec.py  test_prompts.py  test_sockserver_smoke.py  test_usage_tracker.py  test_workflow_compiler.py  test_workflow_engine.py  test_workflow_parser.py
(+66 files in other folders)
